# audio_server

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml
migration/: env.py
migration/versions/: 47919c2f012e_initial_migration.py
src/config/: config.py
src/models/: __init__.py  file.py
src/routes/: audio.py  file.py
src/server/: app.py  db.py  deps.py  utils.py
src/services/: audio_service.py  errors.py  file_service.py  local_service.py  oss_service.py  transcription_service.py
